- provide a clean zope setup and move zope.app.testing to a test dependency - removed unused dependencies like ZODB3 etc. from install_requires

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,14 +1,18 @@
 [buildout]
-parts = test coverage-test coverage-report
+parts = test checker coverage-test coverage-report
 develop = .
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.app.security
+eggs = zope.app.security [test]
+
+[checker]
+recipe = lovely.recipe:importchecker
+path = src/zope/app/security
 
 [coverage-test]
 recipe = zc.recipe.testrunner
-eggs = zope.app.security
+eggs = zope.app.security [test]
 defaults = ['--coverage', '../../coverage']
 
 [coverage-report]
