--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
-bin/
-eggs/
-develop-eggs/
-parts/
+*.pyc
+*.so
+*.dll
+__pycache__
+src/*.egg-info
+
 .installed.cfg
-*.py[co]
-__pycache__/
-build/
-dist/
-*.egg-info/
-.tox/
+.tox
+bin
+build
+develop-eggs
+parts
+doc/_build
+.coverage
+htmlcov
