--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
-sudo: false
+dist: xenial
 python:
   - 2.7
-  - 3.4
   - 3.5
   - 3.6
-  - pypy-5.4.1
+  - 3.7
+  - pypy
+  - pypy3
 script:
   - coverage run -m zope.testrunner --test-path=src  --auto-color --auto-progress
 
@@ -23,4 +24,4 @@ install:
 cache: pip
 
 before_cache:
-    - rm -f $HOME/.cache/pip/log/debug.log
+  - rm -f $HOME/.cache/pip/log/debug.log
