--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
-    py27, pypy, py34, py35, py36
+    py27, py35, py36, py37, pypy, pypy3
 
 [testenv]
 commands =
-    zope-testrunner --test-path=src []
-deps =
-    .[test]
+    zope-testrunner --test-path=src {posargs:-pvc}
+extras =
+    test
