--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,41 @@
+# Generated from:
+# https://github.com/zopefoundation/meta/tree/master/config/pure-python
 [bdist_wheel]
-universal = 1
+universal = 0
+
+[flake8]
+doctests = 1
+# F401 imported but unused
+per-file-ignores =
+    src/zope/app/security/__init__.py: F401
+    src/zope/app/security/basicauthadapter.py: F401
+    src/zope/app/security/browser/principalterms.py: F401
+    src/zope/app/security/ftpauth.py: F401
+    src/zope/app/security/interfaces.py: F401
+    src/zope/app/security/loginpassword.py: F401
+    src/zope/app/security/metaconfigure.py: F401
+    src/zope/app/security/metadirectives.py: F401
+    src/zope/app/security/permission.py: F401
+    src/zope/app/security/principal.py: F401
+    src/zope/app/security/principallogging.py: F401
+    src/zope/app/security/principalregistry.py: F401
+    src/zope/app/security/protectclass.py: F401
+    src/zope/app/security/settings.py: F401
+    src/zope/app/security/tests/__init__.py: F401
+    src/zope/app/security/vocabulary.py: F401
+
+[check-manifest]
+ignore =
+    .editorconfig
+    .meta.toml
+
+[isort]
+force_single_line = True
+combine_as_imports = True
+sections = FUTURE,STDLIB,THIRDPARTY,ZOPE,FIRSTPARTY,LOCALFOLDER
+known_third_party = six, docutils, pkg_resources, pytz
+known_zope =
+known_first_party =
+default_section = ZOPE
+line_length = 79
+lines_after_imports = 2
