--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,22 +1,7 @@
 [buildout]
-parts = test checker coverage-test coverage-report
+parts = test
 develop = .
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = zope.app.security [test]
-
-[checker]
-recipe = lovely.recipe:importchecker
-path = src/zope/app/security
-
-[coverage-test]
-recipe = zc.recipe.testrunner
-eggs = zope.app.security [test]
-defaults = ['--coverage', '../../coverage']
-
-[coverage-report]
-recipe = zc.recipe.egg
-eggs = z3c.coverage
-scripts = coverage=coverage-report
-arguments = ('coverage', 'coverage/report')
